--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "@types/node": "^17.0.25",
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
+    "@types/redux-logger": "^3.0.9",
+    "axios": "^0.26.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.0",
     "react-scripts": "5.0.1",
     "react-use-websocket": "^3.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
