--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
-    "@types/node": "^17.0.25",
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
     "@types/redux-logger": "^3.0.9",
     "axios": "^0.26.1",
+    "express": "^4.18.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.0",
@@ -34,7 +34,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "ts-watch-server": "ts-node-dev --respawn server/src/index.ts"
   },
   "eslintConfig": {
     "extends": [
@@ -55,6 +56,10 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.30",
+    "gh-pages": "^3.2.3",
+    "ts-node": "^10.7.0",
+    "ts-node-dev": "^1.1.8"
   }
 }
