--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "ts-watch-server": "ts-node-dev --respawn server/src/index.ts"
+    "ts-watch-server": "ts-node-dev --respawn server/index.ts"
   },
   "eslintConfig": {
     "extends": [
