--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/redux-logger": "^3.0.9",
     "axios": "^0.26.1",
     "express": "^4.18.1",
+    "mongoose": "^6.3.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.0",
