--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "@types/express-session": "^1.17.4",
     "@types/jest": "^27.4.1",
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
     "@types/redux-logger": "^3.0.9",
     "axios": "^0.26.1",
     "express": "^4.18.1",
+    "express-session": "^1.17.2",
     "mongoose": "^6.3.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
