--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "@types/cors": "^2.8.12",
     "@types/express-session": "^1.17.4",
     "@types/jest": "^27.4.1",
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
     "@types/redux-logger": "^3.0.9",
     "axios": "^0.26.1",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-session": "^1.17.2",
     "mongoose": "^6.3.1",
@@ -27,7 +29,7 @@
     "react-use-websocket": "^3.0.0",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.4.1",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
