logging colored timestamp to requests

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "@types/cli-color": "^2.0.2",
     "@types/cors": "^2.8.12",
     "@types/express-session": "^1.17.4",
     "@types/jest": "^27.4.1",
@@ -18,6 +19,7 @@
     "@types/react-dom": "^18.0.1",
     "@types/redux-logger": "^3.0.9",
     "axios": "^0.26.1",
+    "cli-color": "^2.0.2",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-session": "^1.17.2",
